--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
     android:background="#7D92D5"
-tools:context=".SelectionActivity">
+tools:context=".activity.SelectionActivity">
 
     <TextView
         android:id="@+id/textViewName"
