--- a/app/src/main/res/layout/activity_destinations.xml
+++ b/app/src/main/res/layout/activity_destinations.xml
@@ -5,22 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.DestinationsActivity">
+    tools:context=".activity.DestinationsActivity"
+    android:background="#74A21BC8">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="80dp"
         android:background="#25255C"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="300dp"
-        android:background="@drawable/ic_launcher_trip" />
+
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="141dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="500dp"
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/ic_launcher_trip"/>
+
+
 
 </RelativeLayout>
