--- a/app/src/main/res/layout/item_destination.xml
+++ b/app/src/main/res/layout/item_destination.xml
@@ -3,16 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
-    android:background="#F68E04">
+    android:background="#f3f3f3">
 
 <!-- esto es para el texto de destinos y entrar en la web -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FFC107"
+        android:textColor="#554A28"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:paddingHorizontal="30dp"
         tools:text="Destino"/>
 </RelativeLayout>
